# cryptobot

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  README.md  build.sh  config.json  cryptobot.sh  dashboard.qrc  install.sh
.cache/clangd/index/: api.h.4BD6367F5C68BA74.idx  auth.h.D03DEBA6E098E97E.idx  bearer.h.D879C777EC79028D.idx  body.h.454718ED590AA27B.idx  callback.h.0EAEB99D794C71A8.idx  certificates.hpp.CBD602ED7C494E46.idx  connect_timeout.h.52FC6F58C0C06413.idx  cookies.h.EA5421FA172AB09B.idx  cpr.h.506D5A338C47F5C0.idx  cprtypes.h.D254370487732506.idx  cprver.h.E77275DA82DBFAE1.idx  curl_container.h.50BFD306BB1C6178.idx  curlholder.h.F48477DE07896EEB.idx  digest.h.9B6C44809E5AAAA1.idx  elog.h.77446A9F6FD4672E.idx  error.h.B280FF8FA7DBF26A.idx  http_version.h.C1BB199824C66EDC.idx  interface.h.9C95AB05291987B1.idx  limit_rate.h.CE61CB96193E3680.idx  low_speed.h.37C7E9340A7F6D88.idx  main.cpp.643ABA0D3BBEF4D6.idx  multipart.h.7BE197E9E2318E81.idx  ntlm.h.9C0459C71EF9B6BB.idx  opel.cpp.994FCCEE94765742.idx  opel.h.AB92DFE66BEAF9FF.idx  parameters.h.1D6250479C77B046.idx  payload.h.AFCB07B54507816F.idx  proxies.h.C2128476DD87B07D.idx  proxyauth.h.C81F66FB73A57878.idx  range.h.6A9AFC862459CC54.idx  redirect.h.D24697B8691198AA.idx  requests.cpp.F1ADA96DC5B8EDC6.idx  requests.h.1DA18B3F2B64A2D1.idx  response.h.EFB49CAE139C124D.idx  root_certificates.hpp.B6BBB5B514D60946.idx  session.h.8D681AC9037BF50A.idx  sql.cpp.4B474C34D913E696.idx  sql.h.B43719E2FEB29819.idx  sqlite3.h.87FC4921A4683E19.idx  ssl_options.h.01D7B1FC552A9E66.idx  (+10 more)
inc/: buywindow.h  client.h  dashboardwindow.h  mainwindow.h  opel.h  requests.h  root_certificates.hpp  server.h  socket.h  sql.h  structs.h  trade.h  utilities.h  webserver.h  websocket.h
lib/: CMakeLists.txt
lib/libcpr-1.7.2/lib/: libcpr.so.1.7.2
lib/libelog-1.0.0/: CMakeLists.txt
lib/libelog-1.0.0/inc/: elog.h
lib/libelog-1.0.0/src/: elog.cpp
lib/libelog-2.1.0/inc/: elog.h
lib/libelog-2.1.0/src/: elog.cpp
lib/libgmock-1.11.0/: CMakeLists.txt
lib/libgtest-1.11.0/: CMakeLists.txt
lib/libhttp-0.10.3/: CMakeLists.txt
lib/libjson-1.9.5/lib/: libjsoncpp.so.1.9.5
lib/libjsoncpp-1.9.5/: CMakeLists.txt
lib/libjsoncpp-1.9.5/src/: json_reader.cpp  json_value.cpp  json_writer.cpp
lib/libsqlite-3.37.2/: CMakeLists.txt
lib/libwebsockets-4.3.0/include/: lws_config.h
lib/libwebsockets-4.3.0/lib/: libwebsockets.so.19
module/: SQlite3.cmake  libcap2.cmake  libcurl.cmake  sqlite3.cmake
src/: CMakeLists.txt  buywindow.cpp  buywindow.ui  client.cpp  dashboardwindow.cpp  dashboardwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  opel.cpp  requests.cpp  server.cpp  socket.cpp  sql.cpp  trade.cpp  utilities.cpp  webserver.cpp  websocket.cpp
test/: CMakeLists.txt  main.cc  main.cpp  test_main.cc  test_utilities.cc  test_utilities.cpp  test_utilities.h
